# CitiesBot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  config.py  docker-compose.yml  format.sh  keyboards.py  logger.py  pyproject.toml  pytest.ini  update.sh
.github/workflows/: ci.yml
data/: cities_ru.json  stats.json
handlers/: city.py  game.py  stats.py
services/: city_api.py  game_manager.py  stats_manager.py
settings/: logger.py
src/: bot.py
src/handlers/: city.py  game.py  information.py  stats.py
src/services/: stats_manager.py
tests/: test_city_api.py  test_game_manager.py  test_stats_manager.py
